<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FileExplorer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="file_name">File name</string>
    <string name="file_size">Size</string>
    <string name="file_date">Date</string>

    <string name="app_version">v.0.001</string>
    <string name="app_description">A file explorer designed to offer simplicity and speed</string>
    <string name="action_about">About</string>
    <string name="action_sorting">Sort by</string>
    <string name="action_sorting_sense">Reverse sorting</string>
    <string name="action_displaying">Displaying</string>
    <string name="action_display_list">List</string>
    <string name="action_display_grid">Grid</string>
    <string name="action_properties">Properties</string>
    <string name="action_search_all_documents">Documents</string>
    <string name="action_search_all_images">Images</string>
    <string name="action_search_all_musics">Musics</string>
    <string name="action_search_all_videos">Videos</string>

    <string name="pref_main_directory">Main directory</string>
    <string name="pref_displaying">Displaying</string>
    <string name="pref_text_size">Text size</string>
    <string name="pref_hidden_file">Hidden file</string>
    <string name="pref_clear_prefs_file">Clear preferences</string>

    <string name="quit">Quit the application</string>
    <string name="quit_confirmation">Do you really want to quit the application?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="type">Type :</string>
    <string name="path">Path :</string>
    <string name="size">Size :</string>
    <string name="duration">Duration :</string>
    <string name="content">Content :</string>
    <string name="resolution">Resolution :</string>
    <string name="modified">Modified :</string>
    <string name="hidden">Hidden :</string>
    <string name="elements">elements</string>
    <string name="unknown">Unknown</string>

    <string name="type_directory">Directory</string>
    <string name="type_picture">Picture</string>
    <string name="type_music">Audio</string>
    <string name="type_video">Video</string>
    <string name="type_archive">Archive</string>
    <string name="type_document">Document</string>
    <string name="type_spreadsheet">Spreadsheet</string>
    <string name="type_presentation">Presentation</string>
    <string name="type_unknown">%1$s file</string>

    <string name="button_explorer">Browse..</string>
    <string name="button_go">Open the file</string>
    <string name="open_appli">Opening explorer</string>
    <string name="not_handle">This file is not managed</string>
    <!-- préferences -->
    <string name="displayingpreferencetitle">Displaying</string>
    <string name="download_directory">/storage/sdcard0/Download</string>
    <string-array name="list_displaying_titles">
        <item>List view</item>
        <item>Grid view</item>
    </string-array>
    <string-array name="list_displaying_values">
        <item>List</item>
        <item>Grid</item>
    </string-array>

    <string-array name="list_sorting_values">
        <item>Name</item>
        <item>Size</item>
        <item>Date</item>
    </string-array>

    <string name="title_activity_main_application">File explorer</string>
    <string name="search">Search</string>
    <string name="search_no_result_found">No result found</string>
    <string name="display">Display</string>

    <string name="searching_all_documents">Searching all documents...</string>
    <string name="searching_all_musics">Searching all musics...</string>
    <string name="searching_all_pictures">Searching all pictures...</string>
    <string name="searching_all_videos">Searching all videos...</string>

</resources>
