<!--?xml version="1.0" encoding="utf-8"?-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Général">

        <ListPreference
            android:key="pref_displaying"
            android:title="@string/displayingpreferencetitle"
            android:entries="@array/listentries"
            android:entryValues="@array/listvalues"
            android:defaultValue="0"/>

        <EditTextPreference
            android:key="pref_text_size"
            android:title="@string/pref_text_size"
            android:defaultValue="20"
            android:numeric="integer">
        </EditTextPreference>

        <CheckBoxPreference
            android:key="pref_hidden_file"
            android:title="@string/pref_hidden_file">
        </CheckBoxPreference>

        <Preference
            android:key="pref_clear_prefs_file"
            android:title="@string/pref_clear_prefs_file">
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>