<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="15dp">
    
    <LinearLayout
        android:id="@+id/linearlayout_icon_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <ImageView
	        android:id="@+id/app_icon"
	        android:layout_width="70dp"
	        android:layout_height="70dp"
	        android:padding="4dp"
	        android:src="@drawable/icon_folder">
	    </ImageView>
	    
	    <TextView 
	        android:id="@+id/app_name"
	    	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="4dp"
	        android:text="@string/app_name"
	        android:textStyle="bold"
	        android:textSize="30sp"/>
    </LinearLayout>


    <TextView 
        android:id="@+id/app_description"
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout_icon_name"
        android:padding="4dp"
        android:text="@string/app_description"/>
    
    <TextView 
        android:id="@+id/app_version"
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_description"
        android:padding="4dp"
        android:text="@string/app_version"/>

</RelativeLayout>
