<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:padding="20px">

    <TextView
        android:id="@+id/file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="nom_du_fichier"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="50px" />

    <LinearLayout
        android:id="@+id/LL_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/file_name"
        android:paddingBottom="10px">

        <TextView
            android:id="@+id/file_type_label"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/type"/>

        <TextView
            android:id="@+id/file_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="type_txt"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/LL_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LL_type"
        android:paddingBottom="10px">

        <TextView
            android:id="@+id/file_folder_label"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/path"/>

        <TextView
            android:id="@+id/file_folder_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="folder_txt" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LL_folder"
        android:paddingBottom="10px">

        <TextView
            android:id="@+id/file_size_label"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/size"/>

        <TextView
            android:id="@+id/file_size_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="size_txt"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_modified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LL_size"
        android:paddingBottom="10px">

        <TextView
            android:id="@+id/file_modified_label"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/modified"/>

        <TextView
            android:id="@+id/file_modified_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="size_txt"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_special"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LL_modified"
        android:paddingBottom="10px">

        <TextView
            android:id="@+id/file_special_label"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="special :"/>

        <TextView
            android:id="@+id/file_special_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="special_txt"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_hidden"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LL_special"
        android:paddingBottom="10px">

        <TextView
            android:id="@+id/file_hidden_label"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/hidden"/>

        <TextView
            android:id="@+id/file_hidden_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="hidden_txt"/>

    </LinearLayout>

</RelativeLayout>